# cel-policy

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: workflow.yml
bazel/: BUILD.bazel  bundle.py  test_bundle.bzl
conformance/: BUILD.bazel
conformance/testdata/aggregate/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/aggregate_explicit_list_output/: policy.yaml  tests.yaml
conformance/testdata/aggregate_explicit_optional_none/: policy.yaml  tests.yaml
conformance/testdata/aggregate_nested_explicit_list_double_wrapping/: policy.yaml  tests.yaml
conformance/testdata/aggregate_nested_mixed_semantics/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/aggregate_shadowed_variables/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/compile_errors/aggregate_false_condition/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/aggregate_heterogeneous_outputs/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/aggregate_nested_mixed_semantics_error/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/compile_errors/aggregate_unreachable_in_nested_first_match/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/compile_errors/compose_conflicting_output/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/compose_conflicting_subrule/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/compile_errors/duplicate_variable/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/import/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/incompatible_outputs/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/syntax/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/undeclared_reference/: policy.yaml  tests.yaml
conformance/testdata/compile_errors/unreachable/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/compile_errors/unreachable_under_unconditional_aggregate_subrule/: policy.yaml  tests.yaml
conformance/testdata/context_pb/: config.textproto  config.yaml  policy.yaml  tests.textproto  tests.yaml
conformance/testdata/first_match_nested_aggregate/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/k8s/: config.yaml
conformance/testdata/limits/: config.textproto  tests.textproto
conformance/testdata/nested_rule/: config.textproto  tests.textproto  tests.yaml
conformance/testdata/nested_rule2/: tests.textproto
conformance/testdata/nested_rule3/: config.textproto  tests.textproto
conformance/testdata/nested_rules_variable_shadowing/: config.yaml  tests.yaml
conformance/testdata/pb/: config.textproto  config.yaml  policy.yaml  tests.textproto  tests.yaml
conformance/testdata/required_labels/: config.textproto  config.yaml  policy.yaml  tests.textproto
conformance/testdata/restricted_destinations/: config.textproto  config.yaml  tests.textproto
conformance/testdata/unconditional_rules/: config.yaml  policy.yaml  tests.yaml
conformance/testdata/unnest/: config.yaml
conformance/testdata/variable_type_propagation/: config.yaml  policy.yaml  tests.yaml
