load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    package_name = "cel_policy",
    license_kinds = [
        "@rules_license//licenses/spdx:Apache-2.0"
    ],
)

licenses(["notice"])

exports_files(["LICENSE"])
