package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
)

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
    visibility = [
        "//visibility:public",
    ],
)

exports_files(
    srcs = glob([
        "testdata/**/*.yaml",
        "testdata/**/*.textproto",
    ]),
    visibility = [
        "//visibility:public",
    ],
)
