package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
)

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
    visibility = [
        "//third_party/cel/prettier_plugin_cel:__subpackages__",
        "//visibility:public",
    ],
)

exports_files(
    srcs = glob([
        "testdata/**/*.yaml",
        "testdata/**/*.textproto",
    ]),
    visibility = [
        "//visibility:public",
    ],
)
